# hamreporter

./: .gitignore
client-python/: README.md  pyproject.toml
client-python/examples/: submit_report.py
client-python/src/hamreporter/: __init__.py  client.py  crypto.py  models.py
client-python/tests/: test_client.py  test_crypto.py  test_models.py
server/: .gitignore  README.md  settings.gradle.kts
server/app/: build.gradle.kts
server/app/src/main/java/com/w4nya/hamreporter/server/: App.java  CallsignRegistry.java  FederationManager.java  Main.java  NodeIdentity.java  NodeRole.java  PeerInfo.java  SignalReport.java  SignedRequestContext.java
server/app/src/main/java/com/w4nya/hamreporter/server/config/: ConfigManager.java  DataPathResolver.java  NodeConfig.java
server/app/src/main/java/com/w4nya/hamreporter/server/storage/: ReportQuery.java  SqliteDatabaseManager.java  Storage.java
server/app/src/main/java/com/w4nya/hamreporter/server/util/: CryptoService.java  CryptoVerifier.java  HttpSignature.java  RateLimiter.java
server/app/src/main/resources/: schema.sql
server/app/src/test/java/com/w4nya/hamreporter/server/: MainTest.java  SignalReportTest.java
server/app/src/test/java/com/w4nya/hamreporter/server/config/: NodeConfigTest.java
server/app/src/test/java/com/w4nya/hamreporter/server/storage/: ReportQueryTest.java  StorageTest.java
server/app/src/test/java/com/w4nya/hamreporter/server/util/: CryptoServiceTest.java  HttpSignatureTest.java  RateLimiterTest.java
