[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hamreporter"
version = "0.1.0"
description = "Python client library for HamReporter federation server"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hamreporter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
